Fix colors to follow theme on dark and light mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 .dark {
   --color-bg-primary: #000000;
-  --color-bg-secondary: #d1d5db;
+  --color-bg-secondary: #0f101a;
   --color-bg-container: #e5e7eb;
   --color-bg-hover: #111827;
   --color-text-primary: #ffffff;
